--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cc-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="cc-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocketpay</title>
 
@@ -17,7 +17,7 @@
   <body>
     <div id="app">
       <header>
-        <img src="logo.svg" alt="ícone rocketpay" />
+        <img src="../rocketpay/public/logo.svg" alt="ícone rocketpay" />
       </header>
 
       <section class="cc">
